Fix routes for inventory.  Update Swagger file.
