# swagger-output.json
@@ -5,11 +5,9 @@
     "description": "Allows for CRUD operations involved in tracking Operating a Movie Rental Business",
     "version": "1.0.0"
   },
-  "host": "localhost:5000",
+  "host": "",
   "basePath": "/",
-  "schemes": [
-    "https", "http"
-  ],
+  "schemes": ["https"],
   "paths": {
     "/": {
       "get": {
@@ -23,9 +21,7 @@
     },
     "/user/": {
       "post": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "",
         "parameters": [
           {
@@ -72,9 +68,7 @@
         }
       },
       "get": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "",
         "responses": {
           "200": {
@@ -88,9 +82,7 @@
     },
     "/user/{userId}": {
       "put": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "",
         "parameters": [
           {
@@ -116,9 +108,7 @@
         }
       },
       "get": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "",
         "parameters": [
           {
@@ -144,9 +134,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "description": "",
         "parameters": [
           {
@@ -192,130 +180,129 @@
         }
       }
     },
-   "/movies/": {
-  "post": {
-    "tags": ["Available Movies"],
-    "description": "Create a new available movie",
-    "parameters": [
-      {
-        "name": "body",
-        "in": "body",
-        "required": true,
-        "schema": {
-          "type": "object",
-          "properties": {
-            "title": { "type": "string" },
-            "movieId": { "type": "string" },
-            "genre": { "type": "string" },
-            "year": { "type": "number" },
-            "language": { "type": "string" },
-            "studio": { "type": "string" },
-            "durationMinutes": { "type": "number" },
-            "rating": { "type": "number" },
-            "availableCopies": { "type": "number" }
+    "/movies/": {
+      "post": {
+        "tags": ["Available Movies"],
+        "description": "Create a new available movie",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "movieId": { "type": "string" },
+                "genre": { "type": "string" },
+                "availableCopies": { "type": "number" }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Movie created successfully"
+          },
+
+          "400": {
+            "description": "UserDataError: There is no movie with that Id."
+          }, 
+            "500": {
+              "description": "MongoDBConnectionError: There was a problem with the database."
+            }
+          
+        }
+      },
+
+      "get": {
+        "tags": ["Available Movies"],
+        "description": "Get all available movies",
+        "responses": {
+          "200": {
+            "description": "Success - returns all movies"
+          },
+          "500": {
+            "description": "MongoDBConnectionError: There was a problem with the Database."
           }
         }
       }
-    ],
-    "responses": {
-      "201": {
-        "description": "Movie created successfully"
-      },
-      "400": {
-        "description": "Bad Request"
-      },
-      "500": {
-        "description": "Internal Server Error"
-      }
-    }
-  },
+    },
 
-  "get": {
-    "tags": ["Available Movies"],
-    "description": "Get all available movies",
-    "responses": {
-      "200": {
-        "description": "Success - returns all movies"
-      },
-      "500": {
-        "description": "Internal Server Error"
+    "/movies/{genreId}": {
+      "get": {
+        "tags": ["Available Movies"],
+        "description": "Get movies filtered by genre",
+        "parameters": [
+          {
+            "name": "genreId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success - returns filtered movies"
+          },
+          "404": {
+            "description": "NotFoundError: No movies were found in that genre."
+          },
+          "500": {
+            "description": "MongoDBConnectionError: There was a problem with the Database."
+          }
+        }
       }
-    }
-  }
-},
+    },
 
-"/movies/{genreId}": {
-  "get": {
-    "tags": ["Available Movies"],
-    "description": "Get movies filtered by genre",
-    "parameters": [
-      {
-        "name": "genreId",
-        "in": "path",
-        "required": true,
-        "type": "string"
-      }
-    ],
-    "responses": {
-      "200": {
-        "description": "Success - returns filtered movies"
+    "/movies/{id}": {
+      "put": {
+        "tags": ["Available Movies"],
+        "description": "Update a movie by ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Movie updated successfully"
+          },
+          "404": {
+            "description": "NotFoundError: There are no movies with that Id."
+          },
+          "500": {
+            "description": "MongoDBConnectionError: There was a problem with the Database."
+          }
+        }
       },
-      "500": {
-        "description": "Internal Server Error"
-      }
-    }
-  }
-},
 
-"/movies/{id}": {
-  "put": {
-    "tags": ["Available Movies"],
-    "description": "Update a movie by ID",
-    "parameters": [
-      {
-        "name": "id",
-        "in": "path",
-        "required": true,
-        "type": "string"
+      "delete": {
+        "tags": ["Available Movies"],
+        "description": "Delete a movie by ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Movie deleted successfully"
+          },
+          "404": {
+            "description": "NotFoundError: The movie does not exist."
+          },
+          "500": {
+            "description": "MongoDBConnectionError: There was a problem with the Database."
+          }
+        }
       }
-    ],
-    "responses": {
-      "200": {
-        "description": "Movie updated successfully"
-      },
-      "404": {
-        "description": "Movie not found"
-      },
-      "500": {
-        "description": "Internal Server Error"
-      }
-    }
-  },
-
-  "delete": {
-    "tags": ["Available Movies"],
-    "description": "Delete a movie by ID",
-    "parameters": [
-      {
-        "name": "id",
-        "in": "path",
-        "required": true,
-        "type": "string"
-      }
-    ],
-    "responses": {
-      "200": {
-        "description": "Movie deleted successfully"
-      },
-      "404": {
-        "description": "Movie not found"
-      },
-      "500": {
-        "description": "Internal Server Error"
-      }
-    }
-  }
-},
+    },
     "/rented/{userId}": {
       "post": {
         "tags": ["Rented Movies"],
